--- a/presi.html
+++ b/presi.html
@@ -35,9 +35,9 @@ class: center, middle
 
 ## ... in the browser
 ## ... on Node server
-## PureScript for Screeps.com game AI implementation
-## PureScript FFI
-## Benefits of PureScript vs Elm
+## ... Screeps.com game AI
+## ... JavaScript FFI
+### Compare with Elm
 ---
 # PureScript on the server
 
